ci(pr-checks): 自动创建并着色链接检查的PR标签
在链接检查工作流中添加自动创建标签的功能，并基于检查结果设置对应的颜色：
- "链接检查通过" 使用绿色 (0E8A16)
- 包含"不可达"或"无效"的标签使用红色 (D73A4A)
- 其他标签使用默认灰色 (EDEDED)

使用 `gh label create` 命令的 `--force` 参数确保标签存在，避免因标签不存在导致PR编辑失败。

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -120,6 +120,17 @@ jobs:
             
             # 添加新标签
             if [ -n "$add_label" ]; then
+              # 尝试创建标签（如果不存在），颜色默认为灰色或特定颜色
+              # 链接检查通过: 0E8A16 (绿色)
+              # 错误类: D73A4A (红色)
+              local color="EDEDED"
+              if [ "$add_label" == "链接检查通过" ]; then
+                color="0E8A16"
+              elif [[ "$add_label" == *"不可达"* ]] || [[ "$add_label" == *"无效"* ]]; then
+                color="D73A4A"
+              fi
+              
+              gh label create "$add_label" --color "$color" --force || true
               gh pr edit "$pr" --add-label "$add_label"
             fi
           }
@@ -185,6 +196,14 @@ jobs:
               fi
             done
             if [ -n "$add_label" ]; then
+              # 尝试创建标签（如果不存在）
+              local color="EDEDED"
+              if [ "$add_label" == "链接检查通过" ]; then
+                color="0E8A16"
+              elif [[ "$add_label" == *"不可达"* ]] || [[ "$add_label" == *"无效"* ]]; then
+                color="D73A4A"
+              fi
+              gh label create "$add_label" --color "$color" --force || true
               gh pr edit "$pr" --add-label "$add_label"
             fi
           }
