ci(workflows): 修复工作流名称引用并改进所有权验证流程
更新工作流名称引用以匹配实际工作流名称，确保触发链正确。
为所有权验证工作流添加 issues:write 权限，优化执行顺序逻辑。
改进脚本的日志输出和错误处理，增强可调试性。
扩展功能以处理所有打开的 PR，而不仅仅是单个触发事件。

--- a/.github/workflows/3pr-title-update.yml
+++ b/.github/workflows/3pr-title-update.yml
@@ -2,7 +2,7 @@ name: 3PR Title Update From JSON
 
 on:
   workflow_run:
-    workflows: ["PR JSON Check"]
+    workflows: ["2PR JSON Check"]
     types:
       - completed
   workflow_dispatch:
