--- a/.github/workflows/2pr-json-check.yml
+++ b/.github/workflows/2pr-json-check.yml
@@ -2,7 +2,7 @@ name: 2PR JSON Check
 
 on:
   workflow_run:
-    workflows: ["PR Data Path Check"]
+    workflows: ["1PR Data Path Check"]
     types:
       - completed
   workflow_dispatch:
