--- a/.github/workflows/5pr-ownership-init.yml
+++ b/.github/workflows/5pr-ownership-init.yml
@@ -2,7 +2,7 @@ name: 5PR Ownership Verification Init
 
 on:
   workflow_run:
-    workflows: ["PR Link Availability Check"]
+    workflows: ["4PR Link Availability Check"] # 必须和第四个 workflow 的 name 完全一致
     types:
       - completed
   workflow_dispatch:
@@ -10,23 +10,24 @@ on:
 permissions:
   pull-requests: write
   contents: read
+  issues: write
 
 jobs:
   ownership-init:
     if: |
-      github.event.workflow_run.conclusion == 'success' ||
-      github.event_name == 'workflow_dispatch'
+      github.event_name == 'workflow_dispatch' ||
+      github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Init ownership verification
+      - name: Initialize ownership verification
         uses: actions/github-script@v7
         with:
           script: |
-            const fs = require("fs");
+            console.log("=== Ownership Verification Init Started ===");
 
             const pendingLabel = "所有权验证未完成";
             const runningLabel = "所有权验证进行中";
@@ -37,6 +38,8 @@ jobs:
 
             async function processPR(prNumber) {
 
+              console.log("Checking PR:", prNumber);
+
               const pr = await github.rest.pulls.get({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -44,9 +47,14 @@ jobs:
               });
 
               const labels = pr.data.labels.map(l => l.name);
+              console.log("Labels:", labels);
 
-              if (!labels.includes(pendingLabel)) return;
+              if (!labels.includes(pendingLabel)) {
+                console.log("Skip PR (no pending label)");
+                return;
+              }
 
+              // 获取 PR 修改文件
               const files = await github.paginate(
                 github.rest.pulls.listFiles,
                 {
@@ -60,6 +68,8 @@ jobs:
 
               for (const file of files) {
                 if (file.filename.endsWith(".json") && file.status !== "removed") {
+                  console.log("Found JSON:", file.filename);
+
                   const content = await github.rest.repos.getContent({
                     owner: context.repo.owner,
                     repo: context.repo.repo,
@@ -73,7 +83,10 @@ jobs:
                 }
               }
 
-              if (!jsonData || !jsonData.url) return;
+              if (!jsonData || !jsonData.url) {
+                console.log("No valid JSON or url field.");
+                return;
+              }
 
               const siteUrl = jsonData.url.replace(/\/$/, "");
               const random = randomString();
@@ -94,6 +107,8 @@ jobs:
                 "若已准备好，请回复该 PR 以完成最终的验证流程。"
               ].join("\n");
 
+              console.log("Posting comment...");
+
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -101,17 +116,45 @@ jobs:
                 body: commentBody,
               });
 
-              await github.rest.issues.removeLabel({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: prNumber,
-                name: pendingLabel,
-              });
+              console.log("Switching labels...");
 
+              // 删除旧标签
+              try {
+                await github.rest.issues.removeLabel({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: prNumber,
+                  name: pendingLabel,
+                });
+              } catch (e) {
+                console.log("Pending label not found.");
+              }
+
+              // 添加新标签
               await github.rest.issues.addLabels({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: prNumber,
                 labels: [runningLabel],
               });
+
+              console.log("Ownership verification initialized for PR #" + prNumber);
             }
+
+            // 获取所有 open PR
+            const prs = await github.paginate(
+              github.rest.pulls.list,
+              {
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                state: "open",
+              }
+            );
+
+            console.log("Total open PRs:", prs.length);
+
+            for (const pr of prs) {
+              await processPR(pr.number);
+            }
+
+            console.log("=== Ownership Verification Init Finished ===");
