ci: 优化 PR 所有权验证工作流的触发逻辑
- 将触发事件从 `workflow_run` 改为 `pull_request` 的 synchronize 和 reopened 事件，以直接响应 PR 更新
- 移除对 `5PR Ownership Verification Init` 工作流的依赖，简化流程
- 在 `issue_comment` 事件处理中增加非 PR 评论的检查
- 为文件内容不匹配的错误信息提供更详细的日志
- 调整事件处理顺序，优先处理 `pull_request` 和 `issue_comment` 事件

--- a/.github/workflows/6pr-ownership-verify.yml
+++ b/.github/workflows/6pr-ownership-verify.yml
@@ -1,13 +1,11 @@
 name: 6PR Ownership Verification Final
 
 on:
-  workflow_run:
-    workflows: ["5PR Ownership Verification Init"]
-    types:
-      - completed
-  workflow_dispatch:
+  pull_request:
+    types: [synchronize, reopened]
   issue_comment:
     types: [created]
+  workflow_dispatch:
 
 permissions:
   pull-requests: write
@@ -54,7 +52,7 @@ jobs:
                 }
               );
 
-              // 查找包含 .txt 的验证评论
+              // 找到最近的验证 URL
               let verifyUrl = null;
 
               for (const comment of comments.reverse()) {
@@ -87,10 +85,16 @@ jobs:
                 }
 
                 if (text.trim() !== prHash.trim()) {
-                  throw new Error("File content mismatch");
+                  throw new Error(
+                    "File content mismatch. Expected: " +
+                    prHash +
+                    " Got: " +
+                    text.trim()
+                  );
                 }
 
                 // ===== SUCCESS =====
+
                 await github.rest.issues.createComment({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
@@ -122,24 +126,33 @@ jobs:
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   issue_number: prNumber,
-                  body: `所有权验证未成功，详细日志：${log}`
+                  body: "所有权验证未成功，详细日志：" + log
                 });
 
                 console.log("Verification failed:", log);
               }
             }
 
-            // 如果是评论触发
+            // ===== 触发来源判断 =====
+
             if (context.eventName === "issue_comment") {
 
-              if (!context.payload.issue.pull_request) return;
+              if (!context.payload.issue.pull_request) {
+                console.log("Not a PR comment.");
+                return;
+              }
 
               const prNumber = context.payload.issue.number;
               await verifyPR(prNumber);
 
+            } else if (context.eventName === "pull_request") {
+
+              const prNumber = context.payload.pull_request.number;
+              await verifyPR(prNumber);
+
             } else {
 
-              // workflow_run 或 手动触发
+              // 手动触发：检查所有 PR
               const prs = await github.paginate(
                 github.rest.pulls.list,
                 {
