ci(auto-pr): 添加 PAT 令牌以修复 GitHub 脚本权限问题
GitHub Actions 脚本步骤缺少足够的权限来执行仓库操作，通过显式传递 `secrets.PAT` 令牌来确保 `actions/github-script` 具有所需的权限。

--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Label PR by changed paths
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.PAT }}
           script: |
             const owner = context.repo.owner
             const repo = context.repo.repo
@@ -333,6 +334,7 @@ jobs:
       - name: Verify ownership and auto-merge
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.PAT }}
           script: |
             const owner = context.repo.owner
             const repo = context.repo.repo
