feat: 添加画廊页面并集成瀑布流布局
- 新增画廊页面 (/gallery)，支持横屏与竖屏图片切换
- 添加 masonry-layout 和 imagesloaded 依赖以实现响应式瀑布流布局
- 在导航栏中添加“画廊”入口链接
- 实现无限滚动加载，从远程数据源动态获取图片

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
 		"astro-expressive-code": "^0.41.3",
 		"astro-icon": "^1.1.5",
 		"diff": "^8.0.3",
+		"imagesloaded": "^5.0.0",
 		"katex": "^0.16.22",
+		"masonry-layout": "^4.2.2",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-components": "^0.3.0",
 		"rehype-external-links": "^3.0.0",
