ci(auto-pr): 限制PR只能包含单个friends/sponsors文件变更
修改GitHub Actions的auto-pr工作流，增强对PR文件变更的限制。现在要求PR必须仅包含一个文件，且该文件必须是src/data/friends/或src/data/sponsors/目录下的新增或修改操作，删除操作不再被允许。这有助于确保PR的专注性和数据变更的可控性。

--- a/.github/workflows/auto-pr.yml
+++ b/.github/workflows/auto-pr.yml
@@ -65,15 +65,24 @@ jobs:
             }
 
             const files = await listAllFiles()
-            const paths = files.map((f) => f.filename)
 
-            const touchedFriends = paths.some((p) => p.startsWith('src/data/friends/'))
-            const touchedSponsors = paths.some((p) => p.startsWith('src/data/sponsors/'))
-
-            if (!touchedFriends && !touchedSponsors) {
-              core.info('No friends/sponsors changes detected. Skip.')
+            if (files.length !== 1) {
+              await createComment('PR 必须仅包含一个文件变更。')
               return
             }
+            const file = files[0]
+            if (!file.filename.startsWith('src/data/friends/') && !file.filename.startsWith('src/data/sponsors/')) {
+              await createComment('只允许更改 src/data/friends/ 或 src/data/sponsors/ 下的文件。')
+              return
+            }
+            if (file.status !== 'added' && file.status !== 'modified') {
+              await createComment('只允许新增或编辑文件。')
+              return
+            }
+
+            const paths = files.map((f) => f.filename)
+            const touchedFriends = file.filename.startsWith('src/data/friends/')
+            const touchedSponsors = file.filename.startsWith('src/data/sponsors/')
 
             for (const name of [
               LABEL_FRIEND,
@@ -746,12 +755,22 @@ jobs:
             }
 
             const files = await listAllFiles()
-            const relevant = files.filter((f) => {
-              if (f.status === 'removed') return false
-              if (f.filename.startsWith('src/data/friends/')) return true
-              if (f.filename.startsWith('src/data/sponsors/')) return true
-              return false
-            })
+
+            if (files.length !== 1) {
+              await createComment('PR 必须仅包含一个文件变更。')
+              return
+            }
+            const file = files[0]
+            if (!file.filename.startsWith('src/data/friends/') && !file.filename.startsWith('src/data/sponsors/')) {
+              await createComment('只允许更改 src/data/friends/ 或 src/data/sponsors/ 下的文件。')
+              return
+            }
+            if (file.status !== 'added' && file.status !== 'modified') {
+              await createComment('只允许新增或编辑文件。')
+              return
+            }
+
+            const relevant = files
 
             const invalidSuffix = relevant.filter((f) => !f.filename.endsWith('.json')).map((f) => f.filename)
             if (invalidSuffix.length) {
