chore: 添加 AI 摘要生成脚本到 package.json
在 scripts 中新增 'ai-summary' 命令，用于运行 generate-ai-summary.js 脚本，以支持 AI 自动生成摘要的功能。

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"del-space": "node scripts/del-space.js",
 		"update-diff": "node scripts/update-diff.js",
 		"watermark": "node scripts/add-watermark.js",
+		"ai-summary": "node scripts/generate-ai-summary.js",
 		"format": "biome format --write ./src",
 		"lint": "biome check --write ./src",
 		"postinstall": "patch-package"
