ci: 移除强制推送时的静默标志
移除 git push 命令中的 -q 选项，使推送过程输出日志，
便于调试和监控同步状态。

--- a/.github/workflows/sync-cnb.yml
+++ b/.github/workflows/sync-cnb.yml
@@ -45,4 +45,4 @@ jobs:
 
       - name: 7. Force Push to CNB
         working-directory: ${{ env.DIR_NAME }}
-        run: git push -f -q origin main
+        run: git push -f origin main
